# NextUp-Recommender-System

./: .gitignore  README.md  chat_provider.py  config.yaml  config_ml32m.yaml  content_tower.py  embedding_store.py  environment.yaml  example_config.yaml  fusion.py  graduation.py  inference.py  llm_encoder.py  llm_projection.py  main.py  mamba4rec.py  pyproject.toml  reranker.py  run.py  train.py  train_phases.py
data/reports/: encode_plots_report.json  filter_plots_report.json  movies_no_plot_all.csv  movies_no_plot_no_tmdb.csv  stage1_extract_report.json  stage2_bridge_report.json  stage3_backfill_report.json  stage3b_tmdb_report.json  stage4_final_report.json  stage4_no_plot_movies.csv  tmdb_checkpoint.json
docs/api/: README.md  api-contract.md  data-dictionary.md  external-recommender-spec.yaml
docs/api/test-suite/: conftest.py  test_recommend.py
docs/plans/: 2026-02-18-imdb-plot-pipeline-design.md  2026-02-18-imdb-plot-pipeline-plan.md  2026-02-20-dual-arm-architecture-design.md  2026-02-20-dual-arm-implementation-plan.md  md_to_pdf.py  style.css
pipeline/: backfill.py  consolidate.py  download.py  encode_plots.py  extract_plots.py  filter_plots.py  join_movielens.py  run_pipeline.py  wikidata_bridge.py
tests/: test_chat_provider.py  test_content_tower.py  test_embedding_store.py  test_graduation.py  test_inference.py  test_integration.py  test_llm_encoder.py  test_mamba4rec.py  test_reranker.py  test_train.py
tests/pipeline/: test_backfill.py  test_consolidate.py  test_encode_plots.py  test_extract_plots.py  test_filter_plots.py  test_join_movielens.py
