[project]
name = "fusion"
version = "0.1.0"
description = "Mamba4Rec with LLM Fusion for mood-aware recommendations"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "recbole>=1.1.1",
    "sentence-transformers>=2.2.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
# mamba-ssm requires Linux + CUDA
gpu = [
    "mamba-ssm>=1.0.0; sys_platform == 'linux'",
    "causal-conv1d>=1.0.0; sys_platform == 'linux'",
]
# Redis for production mood store
redis = ["redis>=4.0.0"]
# Data pipeline: Wikipedia/IMDb plot extraction & Parquet storage
data = [
    "polars>=1.0.0",
    "mwxml>=0.3.3",
    "mwparserfromhell>=0.6.5",
    "aiohttp>=3.9.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]
# LLM chat providers for mood extraction
chat = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
